--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-elements": "^2.3.2",
+    "react-native-extra-dimensions-android": "^1.2.5",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-material-bottom-navigation": "^1.0.5",
     "react-native-material-bottom-navigation-performance": "^0.7.8",
+    "react-native-modal": "^11.5.6",
+    "react-native-modalbox": "^2.0.0",
     "react-native-paper": "^4.1.0",
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.7",
