--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@react-navigation/material-bottom-tabs": "^5.2.16",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "axios": "^0.20.0",
     "install-peerdeps": "^2.0.3",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-config": "^1.3.3",
+    "react-native-dotenv": "^2.4.0",
     "react-native-elements": "^2.3.2",
     "react-native-extra-dimensions-android": "^1.2.5",
     "react-native-gesture-handler": "^1.8.0",
@@ -33,7 +36,11 @@
     "react-native-skeleton-content-nonexpo": "^1.0.11",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^12.1.0",
-    "react-native-vector-icons": "^7.0.0"
+    "react-native-vector-icons": "^7.0.0",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
