--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^5.9.0",
     "axios": "^0.20.0",
     "install-peerdeps": "^2.0.3",
+    "ramda": "^0.27.1",
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-config": "^1.3.3",
@@ -24,9 +25,9 @@
     "react-native-elements": "^2.3.2",
     "react-native-extra-dimensions-android": "^1.2.5",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-infinite-scrolling": "^2.0.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-material-bottom-navigation": "^1.0.5",
-    "react-native-material-bottom-navigation-performance": "^0.7.8",
     "react-native-modal": "^11.5.6",
     "react-native-modalbox": "^2.0.0",
     "react-native-paper": "^4.1.0",
@@ -37,6 +38,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^7.0.0",
+    "react-navigation-stack": "^2.8.2",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
