--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-dotenv": "^2.4.0",
     "react-native-elements": "^2.3.2",
     "react-native-extra-dimensions-android": "^1.2.5",
+    "react-native-fast-image": "^8.3.2",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-infinite-scrolling": "^2.0.0",
     "react-native-linear-gradient": "^2.5.6",
@@ -40,9 +41,11 @@
     "react-native-vector-icons": "^7.0.0",
     "react-navigation-stack": "^2.8.2",
     "react-redux": "^7.2.1",
+    "recyclerlistview": "^3.0.1-beta.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "underscore": "^1.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
