update habis presentasi

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@react-navigation/stack": "^5.9.0",
     "axios": "^0.20.0",
     "install-peerdeps": "^2.0.3",
+    "intl": "^1.2.5",
+    "jetifier": "^1.6.6",
+    "jsc-android": "^241213.1.0",
     "ramda": "^0.27.1",
     "react": "16.13.1",
     "react-native": "0.63.2",
