--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "intl": "^1.2.5",
     "jetifier": "^1.6.6",
     "jsc-android": "^241213.1.0",
+    "prop-types": "^15.7.2",
     "ramda": "^0.27.1",
     "react": "16.13.1",
     "react-native": "0.63.2",
