--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/material-bottom-tabs": "^5.2.16",
@@ -20,6 +21,7 @@
     "intl": "^1.2.5",
     "jetifier": "^1.6.6",
     "jsc-android": "^241213.1.0",
+    "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "ramda": "^0.27.1",
     "react": "16.13.1",
@@ -43,12 +45,17 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^7.0.0",
+    "react-navigation": "^4.4.0",
     "react-navigation-stack": "^2.8.2",
     "react-redux": "^7.2.1",
     "recyclerlistview": "^3.0.1-beta.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "tcomb": "^3.2.29",
+    "tcomb-form-native": "^0.6.20",
+    "tcomb-validation": "^3.4.1",
     "underscore": "^1.11.0"
   },
   "devDependencies": {
