--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-extra-dimensions-android": "^1.2.5",
     "react-native-fast-image": "^8.3.2",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-image-picker": "^2.3.3",
     "react-native-infinite-scrolling": "^2.0.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-material-bottom-navigation": "^1.0.5",
