--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "flow": "flow"
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.0",
@@ -22,6 +23,7 @@
     "jetifier": "^1.6.6",
     "jsc-android": "^241213.1.0",
     "lodash": "^4.17.20",
+    "moment": "^2.28.0",
     "prop-types": "^15.7.2",
     "ramda": "^0.27.1",
     "react": "16.13.1",
@@ -60,21 +62,23 @@
     "underscore": "^1.11.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-flow": "^7.10.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
     "babel-jest": "^25.1.0",
     "eslint": "^7.8.1",
-    "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.0",
+    "flow-bin": "^0.134.0",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
-    "prettier": "^2.1.1",
+    "prettier": "^2.1.2",
     "react-test-renderer": "16.13.1"
   },
   "jest": {
